src/tests/testfiles/variable-declarations/14.txt
Error at 2:11: Variable initialization must have the same type (have float and char [])
float a = {"a"};
      ^
